# CNFE

./: README.md  requirements.txt
CNFE/lin/: cipher.py  params.py
CNFE/lin/roles/: __init__.py  data_owner.py  key_curator.py  user.py
CNFE/mife/: cipher.py  params.py
CNFE/quad/: __init__.py  cipher.py  params.py
CNFE/quad/roles/: data_owner.py  key_curator.py  user.py
CNFE/utils/: __init__.py  io.py  rng.py
db/: CMakeLists.txt  README.md  docker-compose.yml
db/cmake/: FindGMP.cmake  FindMariaDB.cmake
db/include/: cnfe.h
db/script/: lin.py  quad.py  writer.py
db/src/: types.hpp
db/src/lin/: lin.cpp  lin.h  main.cpp
db/src/quad/: main.cpp  quad.cpp  quad.h
plot/: plot.ipynb  plot.py
tests/: lin.batch.py  lin.demo.py  lin.perf.py  mife.test.py  quad.batch.py  quad.demo.py  quad.perf.py  quad.test.py
